--- a/dailystudy/11.19/active3.html
+++ b/dailystudy/11.19/active3.html
@@ -6,11 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-    .red{
+    .red1{
+        position:absolute;
+        top: 0;
+        left: 0;
         margin-bottom: 40px;
         width: 100px;
         height: 100px;
-        opacity: 1;
+        opacity: 0.1;
+        border: 1px red solid;
+        background-color: red;
+    }
+    .red2{
+        position:absolute;
+        top: 150px;
+        left: 0;
+        margin-bottom: 40px;
+        width: 100px;
+        height: 100px;
+        opacity: 0.1;
         border: 1px red solid;
         background-color: red;
     }
@@ -33,7 +47,9 @@ function getStyle(ele,attr){
 var target = {
     width: 400,
     height: 400,
-    opacity: 10,
+    opacity: 100,
+    left: 200,
+    top: 200,
 }
 var target1 = {
     width: 100,
@@ -106,32 +122,49 @@ var target1 = {
     //     }, 30)
     // }
     //  多物体，多值链式运动框架
-    function move(ele, attr,callback) {
-        clearInterval(ele.timer);
+    function move(ele, target, callback) {
+            clearInterval(ele.timer);
             var speed, cur;
-        ele.timer = setInterval(function () {
-            if (attr == 'opacity') {
-                cur = parseFloat(getStyle(ele, 'opacity'))* 100;
-            } else {
-                cur = parseInt(getStyle(ele, attr));
-            }
-            speed = (target[attr] - cur) / 7;
-            // console.log(Math.ceil(speed));
-            speed = speed > 0 ? Math.ceil(speed) : Math.floor(speed);
-            if (attr == 'opacity') {
-                ele.style[attr] = (cur + speed) / 100;
-            } else {
-                ele.style[attr] = cur + speed + 'px';
-            }
-            if (target[attr] == cur) {
-                clearInterval(ele.timer);
-                callback !== undefined ? callback() : '';
-            }
-        }, 30)
-    }
-    div[0].onmouseenter = function(){
-        move(this,'width',target)
-    }
+            
+            ele.timer = setInterval(function () {
+                // debugger;
+                var stop = true;
+                for (var attr in target) {
+                    if (attr == 'opacity') {
+                        cur = parseFloat(getStyle(ele, 'opacity')) * 100;
+                    } else {
+                        cur = parseInt(getStyle(ele, attr));
+                    }
+                    console.log(cur)
+                    speed = (target[attr] - cur) / 7;
+                    // console.log(Math.ceil(speed));
+                    speed = speed > 0 ? Math.ceil(speed) : Math.floor(speed);
+                    if (attr == 'opacity') {
+                        ele.style[attr] = (cur + speed) / 100;
+                    } else {
+                        ele.style[attr] = cur + speed + 'px';
+                    }
+                    if (target[attr] !== cur) {
+                        stop = false;
+                    }
+                }
+                if (stop) {
+                    clearInterval(ele.timer);
+                    typeof callback == 'function' ? callback() : '';
+                }
+            }, 30)
+        }
+    // div[0].onclick = function(){
+    //     move(this,target,function(){
+    //         move(div[1],target)
+    //     })
+    // }
+    move(div[0],target,function(){
+        move(div[1],target)
+    })
+    // div[0].onmouseenter = function(){
+    //     move(this,'width',target)
+    // }
     // div[0].onmouseleave = function(){
     //     move(this,'width',target1)
     // }
