--- a/dailystudy/11.19/active.html
+++ b/dailystudy/11.19/active.html
@@ -11,12 +11,12 @@
         } */
     .red{
         position:absolute;
-        left:1200px;
+        left:0px;
         top: 0;
         width: 100px;
         height: 100px;
         background-color: red;
-        opacity: 1;
+        opacity: 0.5;
     }
     .btn{
         position: absolute;
@@ -52,7 +52,7 @@
     // var speed;
     // var cur;
     // btn.onclick = function () {
-    //         move(div,100)
+    //         move(100)
     //     }
     //     function move(ele, target) {
     //             var timer = setInterval(function () {
@@ -95,12 +95,25 @@
         // },30)
 
                 //   颜色
-                var cur ,speed;
-                var timer = setInterval(function(){
-                    var cur = parseFloat(getStyle(div,'opacity'));
-                    speed = (target - cur)/7;
-                    div.style.opacity = cur + speed;
-                },300);
+                // var cur ,speed;
+                // function move(target) {
+                //         var timer = setInterval(function () {
+                //             var cur = parseFloat(getStyle(div, 'opacity'))*100;
+                //             // console.log(speed,target,cur);
+                //             speed = (target - cur) / 7;
+                //             // speed = speed < 0 ? Math.floor(speed) : Math.ceil(speed);
+                //             if(target == cur){
+                //                 clearInterval(timer);
+                //             }else{
+                //                 div.style.opacity = (cur + speed)/100;
+                //             }
+                //             console.log(target,cur,speed);
+                //         }, 30);
+                //     }
+                
+
+
+                    //   四个横条一起运动
 
         
     </script>
