--- a/dailystudy/11.20/arrayMathod.html
+++ b/dailystudy/11.20/arrayMathod.html
@@ -165,8 +165,8 @@
 
     //    reduce 方法 
     //  返回一个值  function preValue curValue index self, initial初始值
+    var cookieStr = "BAIDUID=25F9447244A7436269B6D0A1937402A9:FG=1; BIDUPSID=25F9447244A7436269B6D0A1937402A9; PSTM=1539848684; BDUSS=pKZG5UVHRSZmFTMDY3MXFNRVVEUlR0d25uR2luMHdYSFl0cXVDWDU5WDV6UkJjQVFBQUFBJCQAAAAAAAAAAAEAAACLvcBd08fAtnN1bm55AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPlA6Vv5QOlbOU; BD_UPN=12314353; ZD_ENTRY=other; BD_HOME=1; H_PS_PSSID=1462_21081_18560_28131_26350_27751_22075; delPer=0; BD_CK_SAM=1; PSINO=6; BDORZ=B490B5EBF6F3CD402E515D22BCDA1598; H_PS_645EC=8c5aZdHRsW89ehX%2FIe4J%2Fb4LRWJr0luNG2jPEh2nI5jjXSyjMXtO%2FQbqoehTi%2BrBFhee; BDRCVFR[feWj1Vr5u3D]=mk3SLVN4HKm; BDSVRTM=28";
     
-
 
     </script>
 </body>
