--- a/dailystudy/9.2/yubianyi.html
+++ b/dailystudy/9.2/yubianyi.html
@@ -287,7 +287,16 @@
 // var a = 2;
 
 
-
+function ali(ele){
+    console.log(ele);
+    var ele = 1;
+    // function ele(){};
+    console.log(ele);
+}
+ali(2)
+//AO{这时候ele = 1 是执行的时候执行的
+//  ele:undefined 》 传参2 》 函数体func 
+// }
     </script>
 </body>
 </html>
