--- a/dailystudy/11.20/arrayMathod.html
+++ b/dailystudy/11.20/arrayMathod.html
@@ -95,6 +95,7 @@
     // Array.prototype.myMap = function(func){
     //     var arr = this,len = arr.length,param2 = arguments[1] || window,newArr = [];
     //     for(var i = 0;i < len; i ++){
+    //         // console.log(func.apply(param2,[arr[i],i,arr]));
     //         newArr.push(func.apply(param2,[arr[i],i,arr]))
     //     }
     //     return newArr;
@@ -174,14 +175,14 @@
 
 //   initialValye 是启动积累的值
 //  操纵preValue，最后传递给initialValue，其实也可以直接使用initialValue本身
-    // var personArr = [
-    //     {name: '房',src: "images/1.jpg", dis: '爱学习', sex: 'm', age: 18 },
-    //     {name: '滴滴',src: "images/3.jpg", dis: '加班', sex: 'm', age: 22 },
-    //     {name: '腾讯',src: "images/4.jpg", dis: '休息', sex: 'f', age: 19 },
-    //     {name: '阿里',src: "images/5.jpg", dis: '抄袭', sex: 'f', age: 25 },
-    // ]
+    var personArr = [
+        {name: '房',src: "images/1.jpg", dis: '爱学习', sex: 'm', age: 18 },
+        {name: '滴滴',src: "images/3.jpg", dis: '加班', sex: 'm', age: 22 },
+        {name: '腾讯',src: "images/4.jpg", dis: '休息', sex: 'f', age: 19 },
+        {name: '阿里',src: "images/5.jpg", dis: '抄袭', sex: 'f', age: 25 },
+    ]
     // var cookieStr = "BAIDUID=25F9447244A7436269B6D0A1937402A9:FG1; BIDUPSID=25F9447244A7436269B6D0A1937402A9; PSTM=1539848684; BDUSS=pKZG5UVHRSZmFTMDY3MXFNRVVEUlR0d25uR2luMHdYSFl0cXVDWDU5WDV6UkJjQVFBQUFBJCQAAAAAAAAAAAEAAACLvcBd08fAtnN1bm55AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPlA6Vv5QOlbOU; BD_UPN=12314353; ZD_ENTRY=other; BD_HOME=1; H_PS_PSSID=1462_21081_18560_28131_26350_27751_22075; delPer=0; BD_CK_SAM=1; PSINO=6; BDORZ=B490B5EBF6F3CD402E515D22BCDA1598; H_PS_645EC=8c5aZdHRsW89ehX%2FIe4J%2Fb4LRWJr0luNG2jPEh2nI5jjXSyjMXtO%2FQbqoehTi%2BrBFhee; BDRCVFR[feWj1Vr5u3D]=mk3SLVN4HKm; BDSVRTM=28";
-    // var initialValue = {name: 'ff'};
+    var initialValue = {name: 'ff'};
     // // var lastValue = personArr.reduce(function(preValue,curValue,index,self){
     // //     // console.log(preValue,curValue,index,self,this);// this 指向window
     // //     // preValue.name += 1;
@@ -189,22 +190,22 @@
     // //     return preValue;
     // // },initialValue)
 
-    // Array.prototype.myReduce = function(func,initialValue){
-    //     var arr = this,len = arr.length,param3 = arguments[2] || window;
-    //     for(var i = 0;i < len;i ++){
-    //         initialValue = func.apply(param3,[initialValue,arr[i],i,self])
-    //     }
-    //     return initialValue;
-    // }
-    // var lastValue = personArr.myReduce(function(preValue,curValue,index,self){
-    //     // console.log(preValue,curValue,index,self,this);// this 指向window
-    //     preValue.name += 1;
-    //     // preValue = curValue;
-    //     // console.log(preValue,curValue,initialValue)
-    //     // console.log(curValue);
+    Array.prototype.myReduce = function(func,initialValue){
+        var arr = this,len = arr.length,param3 = arguments[2] || window;
+        for(var i = 0;i < len;i ++){
+            initialValue = func.apply(param3,[initialValue,arr[i],i,self])
+        }
+        return initialValue;
+    }
+    var lastValue = personArr.myReduce(function(preValue,curValue,index,self){
+        // console.log(preValue,curValue,index,self,this);// this 指向window
+        preValue.name += 1;
+        // preValue = curValue;
+        // console.log(preValue,curValue,initialValue)
+        // console.log(curValue);
 
-    //     return preValue;
-    // },initialValue)
+        return preValue;
+    },initialValue)
 
 
 //     function cookieDel(cookie){
