--- a/dailystudy/11.20/模仿/sousuo.html
+++ b/dailystudy/11.20/模仿/sousuo.html
@@ -127,6 +127,8 @@
     </div>
     <script src="./src/js/filter/filterArrBySex.js"></script>
     <script src="./src/js/filter/filterArrByText.js"></script>
+    <script src="./src/js/combineFilter.js"></script>
+    <script src="./src/js/createStore.js"></script>
     <script src="./src/js/index.js"></script>
-</body>
+</body> 
 </html>
