--- a/dailystudy/10.31/bubble_catch.html
+++ b/dailystudy/10.31/bubble_catch.html
@@ -24,16 +24,16 @@
     </style>
 </head>
 <body>
-    <!-- <div class="wrapper">
+    <div class="wrapper">
         <div class="cont">
             <div class="son"></div>
         </div>
     </div>
-    <div style="width: 100px;height: 1000px;"></div> -->
+    <div style="width: 100px;height: 1000px;"></div>
     <!-- <a href="#">这是百度的网址</a> -->
     <!-- <a href="javascript:void(0)">这是百度的网址</a> -->
 
-    <ul>
+    <!-- <ul>
         <li>1</li>
         <li>2</li>
         <li>3</li>
@@ -44,11 +44,11 @@
         <li>8</li>
         <li>9</li>
         <li>10</li>
-    </ul>
+    </ul> -->
     <script>
-    // var wrapper = document.getElementsByClassName('wrapper')[0];
-    // var cont = document.getElementsByClassName('cont')[0];
-    // var son = document.getElementsByClassName('son')[0];
+    var wrapper = document.getElementsByClassName('wrapper')[0];
+    var cont = document.getElementsByClassName('cont')[0];
+    var son = document.getElementsByClassName('son')[0];
 
     //   事件冒泡
     // document.addEventListener('click',function(){
@@ -79,16 +79,16 @@
 
     //   取消冒泡和阻止默认事件
     
-    // document.onclick = function(){
-    //     console.log('a')
-    // }
-    // wrapper.onclick = function(e){
-    //     // var e = e || window.event;
-    //     // e.stopPropagation();
-    //     // e.cancelBubble = true;
-    //     stopEvent(e)
-    //     this.style.backgroundColor = 'green';
-    // }
+    document.onclick = function(){
+        console.log('a')
+    }
+    wrapper.onclick = function(e){
+        var e = e || window.event;
+        // e.stopPropagation();
+        e.cancelBubble = true;
+        // stopEvent(e)
+        this.style.backgroundColor = 'green';
+    }
 
         //封装取消冒泡事件
 
